Bug#51110: Wrong result with COUNT(*) and semijoin

The duplicate weedout semijoin strategy is shipping certain column
combinations to a temporary table, in order to filter out any duplicates
caused by reading duplicate rows from semijoined tables.
          
The temporary table starts out as a memory table, but if the size reaches
a maximum value, it is converted to a disk-based table.
When such conversion occurs, the number of rows output from the query is
reported as one less than it should be.
          
The reason for this is that when do_sj_dups_weedout() creates the
disk-based table, the return value is erroneously reported as 1
instead of 0, meaning that the row in question is always registered
as a duplicate. The problem is fixed by setting proper return values.
          
The function create_internal_tmp_table_from_heap(), which converts the
memory table to a disk-based table, also copies the offending row
(the "last row") into the new table. There is an argument ignore_last_dup
that manages whether duplicate insertions of this row was allowed, but
duplicate weedout also needed to know whether a duplicate was reported
or not. This problem was fixed by adding an optional output argument
is_duplicate to the function.
          
mysql-test/r/subselect3.result
  Fixed result for bug#51110.
          
mysql-test/r/subselect3_jcl6.result
  Fixed result for bug#51110.
          
mysql-test/t/subselect3.test
  Extended previously failing test to be performed with and without
  temporary table overflow. Also added test so that overflow happens
  with and without duplicate row.
          
sql/sql_select.cc
  do_sj_dups_weedout() returns 1 if create_internal_tmp_table_from_heap()
  is called successfully.
  Added output argument "is_duplicate" to
  create_internal_tmp_table_from_heap, added Doxygen header.
          
sql/sql_select.h
  Updated prototype of create_internal_tmp_table_from_heap()
          
sql/sql_show.cc
  Added NULL argument to create_internal_tmp_table_from_heap()
          
sql/sql_union.cc
  Added NULL argument to create_internal_tmp_table_from_heap()
          
sql/sql_update.cc
  Added NULL argument to create_internal_tmp_table_from_heap()

revid:vvaintroub@mysql.com-20100416140221-iyjzh23wj1eew5qw..roy.lyseng@sun.com-20100416142009-8lw6ptxkgbguohy2